      the case of installing to the main root directory. This fix
      completes the change introduced in Conary 2.0.41 and reverted
      in Conary 2.0.42, that caused tag handlers to malfunction.
      (CNY-3142)
    * Conary now puts libtool .la files in :devellib components
      by default, rather than in :lib components, for better
      multilib development environment support. (CNY-3143)

Changes in 2.0.42:
  o Bug Fixes:
    * A previous change that normalized paths before being passed into
     tag handlers has been reverted. (CNY-3141)

Changes in 2.0.41:
  o Bug Fixes:
    * When a derived packages was created incorrectly, Conary could
      sometimes trace back; in these cases, Conary will now print a
      more useful error message. (CNY-3125)
    * Displaying the output from verify spent a significant amount of time
      querying repositories for information which was available in the local
      database. All data accesses for verify are now satisfied locally
      for a significant (10x) speedup in performance).
    * The output for conary verify is more succinct; instead of two
      summary lines per component validated, it now prints one line
      per component that has differences to display. (CNY-2419)
    * Using --verbose on verify now gives some progress indication.
    * Removed improper options for localcs from the man page.
    * Verify significantly sped up.
    * Turned off threading in recreatedb, because threading broke
      for some manifests. (CNY-3128)
    * Rewrote SQL query which removes old dependencies for better performance.
    * The cvc file cache now understand file mode changes as well as 
      content changes. (CNY-3082)
    * Key signatures for archives in source components are no longer checked 
      when the source is in the repository, but rather checked at commit
      time. (CNY-3130)
    * Fixed bug which caused files to be dropped from builds when two