@@ -14,6 +14,9 @@ Changes in @NEW@:
     * Conary now puts libtool .la files in :devellib components
       by default, rather than in :lib components, for better
       multilib development environment support. (CNY-3143)
+    * An internal function used to create directories could fall victim
+      to a race condition on Python 2.4, this has been corrected.
+      (CNY-3145)
 
 Changes in 2.0.42:
   o Bug Fixes:
